--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ section#sec1
 section#sec2
 {
   top: 225px;
-  height: 300px;
+  height: 1000px;
   width: 100%;
   position: absolute;
   border: 1px solid black;
@@ -228,9 +228,9 @@ footer
  width: 100%;
  height: 60px;
  background: black;
- position: absolute;
- top: 545px;
+ position: fixed;
  left: 0;
+ bottom: 0;
 }
 
 footer#aboutfoot
@@ -260,7 +260,7 @@ p#extra
 
 a.blog
 {
-  color: #add8e6; 
+  color: #3895D3; 
 }
 
 a.fa {
@@ -357,58 +357,10 @@ content:'\f099';
   perspective: 1600px;
 }
 
-.carousel {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  animation: rotate360 60s infinite forwards linear;
-}
-.carousel__face {
-  position: absolute;
-  width: 300px;
-  height: 187px;
-  top: 20px;
-  left: 10px;
-  right: 10px;
-  background-size: cover;
-  box-shadow:inset 0 0 0 100px rgba(0,0,0,0.3);
-  display: flex;
-  color: #808080;
-}
-
 span {
   margin: auto;
   font-size: 2rem;
 }
-
-.carousel__face:nth-child(1) {
-  background-image: url("baguio.jpg");
-  transform: rotateY(  0deg) translateZ(430px); }
-.carousel__face:nth-child(2) {
-  background-image: url("baler.jpg");
-    transform: rotateY( 40deg) translateZ(430px); }
-.carousel__face:nth-child(3) {
-  background-image: url("caleruega.jpg");
-  transform: rotateY( 80deg) translateZ(430px); }
-.carousel__face:nth-child(4) {
-  background-image: url("davao.jpg");
-  transform: rotateY(120deg) translateZ(430px); }
-.carousel__face:nth-child(5) {
-  background-image: url("pampanga.jpg");
- transform: rotateY(160deg) translateZ(430px); }
-.carousel__face:nth-child(6) {
-  background-image: url("ilocos.jpg");
- transform: rotateY(200deg) translateZ(430px); }
-.carousel__face:nth-child(7) {
-  background-image: url("laki.jpg");
- transform: rotateY(240deg) translateZ(430px); }
-.carousel__face:nth-child(8) {
-  background-image: url("burias.jpg");
-  transform: rotateY(280deg) translateZ(430px); }
-.carousel__face:nth-child(9) {
-  background-image: url("binacayan.jpg");
-  transform: rotateY(320deg) translateZ(430px); }
 
 @keyframes rotate360
 {
